<?xml version="1.0"?>
<package format="2">
  <name>lab3_turtlesim</name>
  <version>1.0.0</version>
  <description>
    TurtleSim keyboard controller for AIG240 Project 1.
    Supports multi-key simultaneous input for diagonal movement.
  </description>

  <maintainer email="student@senecapolytechnic.ca">Student</maintainer>
  <author>Kevin Wang</author>
  <license>MIT</license>
  <url type="repository">https://github.com/kevinhust/aig240project1</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>turtlesim</exec_depend>

</package>
